@@ -6,6 +6,12 @@ CONNECTION_TIMEOUT = 30  # 30s
 GCODE_EXTENSIONS = (".gcode", ".gc", ".g", ".gco")
 SL_EXTENSIONS = (".sl1", )
 
+# Maximum lenght of filename, including .gcode suffix
+FILENAME_LENGTH = 248
+
+# Characters, forbidden in file name or path
+FORBIDDEN_CHARACTERS = ('\\', '?', '"', '%', '¯', '°', '#', 'ˇ')
+
 
 class State(Enum):
     """Printer could be in one of this state."""
